<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/general_margin"
        android:layout_marginLeft="@dimen/general_margin"
        android:layout_marginRight="@dimen/general_margin"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recipe_details_ingredients_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/recipe_details_margin_top"
                android:text="@string/ingredients_title"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/colorAccent" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_width"
                android:layout_marginTop="@dimen/divider_margin"
                android:background="@color/divider" />

            <LinearLayout
                android:id="@+id/recipe_details_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/recipe_details_margin_start_end"
                android:layout_marginRight="@dimen/recipe_details_margin_start_end"
                android:layout_marginTop="@dimen/recipe_details_margin_top"
                android:orientation="vertical" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/general_margin"
        android:layout_marginLeft="@dimen/general_margin"
        android:layout_marginRight="@dimen/general_margin"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recipe_details_steps_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/recipe_details_margin_top"
            android:text="@string/steps_title"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/colorAccent" />

        <View
            android:id="@+id/divider_two"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginBottom="@dimen/divider_margin"
            android:layout_marginTop="@dimen/divider_margin"
            android:background="@color/divider" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipe_details_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/recipe_details_margin_bottom"
            android:layout_marginEnd="@dimen/recipe_details_margin_start_end"
            android:layout_marginRight="@dimen/recipe_details_margin_start_end"
            android:layout_marginTop="@dimen/recipe_details_margin_top" />
    </LinearLayout>


</LinearLayout>

