<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/step_description_details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frame_information_step"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_video_image"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_half"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/step_exo_video"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

        <!-- href='http://www.freepik.com/free-vector/variety-of-food_795816.htm -->
        <ImageView
            android:id="@+id/step_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/default_food"
            android:visibility="gone"/>
    </FrameLayout>

    <TextView
        android:id="@+id/step_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/step_description_margin"
        android:layout_marginLeft="@dimen/step_description_margin"
        android:layout_marginRight="@dimen/step_description_margin"
        android:layout_marginStart="@dimen/step_description_margin"
        android:layout_marginTop="@dimen/step_description_margin"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/colorSecondaryText"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_information_step"
        tools:text="Description" />

</LinearLayout>